[project]
name = "pomodoro"
version = "0.1.0"
description = ""
authors = [
    {name = "rducky",email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "windows-curses (>=2.4.1,<3.0.0)",
    "pygetwindow (>=0.0.9,<0.0.10)"
]

[tool.poetry]
packages = [{include = "pomodoro"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pomodoro = "pomodoro.__main__:main"